fix: fix issue with scrollbar

--- a/src/components/Friends/_friends.scss
+++ b/src/components/Friends/_friends.scss
@@ -1,7 +1,7 @@
 .friends {
   width: 100vw;
-  max-width: 340px;
-  min-width: 270px;
+  max-width: 250px;
+  min-width: 200px;
   background-color: $secundaryColor;
   padding-left: 20px;
   box-sizing: border-box;
