--- a/src/components/Messages/_messages.scss
+++ b/src/components/Messages/_messages.scss
@@ -3,8 +3,9 @@
   height: 100%;
   background-color: $primaryColor;
   padding: 20px 50px;
+  padding-right: 33px;
   box-sizing: border-box;
-  overflow-y: auto;
+  overflow-y: scroll;
   .messages-wrapper {
     display: flex;
     flex-direction: column;
